--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-30" />
+<meta name="date" content="2025-10-31" />
 
 <title>SNP Clustering Step 1: Generate SNP Distance Matrices</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">SNP Clustering Step 1: Generate SNP
 Distance Matrices</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-30</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -376,7 +376,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -437,10 +437,16 @@ loaded via a namespace (and not attached):
 [70] Rcpp_1.1.0              fastmatch_1.1-6         gridExtra_2.3          
 [73] svglite_2.2.1           coda_0.19-4.1           nlme_3.1-168           
 [76] xfun_0.53               pkgconfig_2.0.3        </code></pre>
+</div>
+<div id="load-dataset" class="section level1">
+<h1>Load dataset</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd_w_sra_metadata.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
 
 paste0(&quot;Number of considered isolates: &quot;,nrow(df))</code></pre>
 <pre><code>[1] &quot;Number of considered isolates: 168&quot;</code></pre>
+</div>
+<div id="load-fasta-files-and-create-pairwise-snp-matrices" class="section level1">
+<h1>Load fasta files and create pairwise SNP matrices</h1>
 <pre class="r"><code># Load
 setwd(&quot;~/Desktop/gl_merlin/Sequence_data/variant_calling/2025-04-15_SNPKIT/&quot;)
 
@@ -472,6 +478,9 @@ dist_matrix &lt;- pbmcapply::pbmclapply(species,FUN=function(x){
   dna_matrix &lt;- dna_matrix %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select(any_of(df$genomic_id))
   return(dna_matrix)
 },mc.cores=6) %&gt;% `names&lt;-`(species)</code></pre>
+</div>
+<div id="save-file" class="section level1">
+<h1>Save file</h1>
 <pre class="r"><code>setwd(&#39;~/Desktop/gl_merlin/&#39;)
 saveRDS(dist_matrix,&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
 </div>
