--- a/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_25_threshold.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_cluster_detection_25_threshold.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-30" />
+<meta name="date" content="2025-10-31" />
 
 <title>Cluster detection using 25 SNPs</title>
 
@@ -576,7 +576,7 @@ display: none;
 
 <h1 class="title toc-ignore">Cluster detection using 25 SNPs</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-30</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -599,7 +599,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -646,6 +646,9 @@ loaded via a namespace (and not attached):
 [41] glue_1.8.0         Rcpp_1.1.0         systemfonts_1.2.3  ggforce_0.5.0     
 [45] xfun_0.53          tidyselect_1.2.1   rstudioapi_0.17.1  farver_2.1.2      
 [49] htmltools_0.5.8.1  svglite_2.2.1      rmarkdown_2.29     compiler_4.5.1    </code></pre>
+</div>
+<div id="load-data" class="section level1">
+<h1>Load data</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd_w_sra_metadata.RDS&quot;) %&gt;% subset(WGS_escre==T &amp; qc_pass==T)
 overall_pair_types &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_pairs_dataset.RDS&#39;)
 SNP_distance_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
@@ -659,6 +662,7 @@ SNP_distance_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLI
 <h2>Note: Clusters are exactly the same if requiring pure clusters at 25
 SNPs</h2>
 <pre class="r"><code>get_clusters_under &lt;- function(dataframe,pair_types,threshold){
+  # Get pairs at or under threshold
   pair_types_under_t &lt;- subset(pair_types,pairwise_dist &lt;=threshold)
   vertices_info &lt;- subset(dataframe,genomic_id %in% c(unique(c(pair_types_under_t$isolate1,pair_types_under_t$isolate2)))) %&gt;% select(genomic_id)  
   ig &lt;- graph_from_data_frame(pair_types_under_t %&gt;% select(isolate1,isolate2),vertices = vertices_info)  
@@ -671,10 +675,11 @@ SNPs</h2>
   ordered_cluster_ids &lt;- order(cluster_sizes, decreasing = TRUE)
   clusters$membership_ordered &lt;- factor(clusters$membership, levels = names(cluster_sizes)[ordered_cluster_ids])
   
-clusters &lt;- components(ig)$membership
-genomic_id &lt;- names(clusters)
-cluster &lt;- clusters
-cluster_call &lt;- cbind.data.frame(genomic_id,cluster)
+  # Add info
+  clusters &lt;- components(ig)$membership
+  genomic_id &lt;- names(clusters)
+  cluster &lt;- clusters
+  cluster_call &lt;- cbind.data.frame(genomic_id,cluster)
 
 get_cluster_membership &lt;- function(isolate,clustering){
   if(isolate %in% names(clustering)){
@@ -685,9 +690,10 @@ get_cluster_membership &lt;- function(isolate,clustering){
   }
   return(cluster)
 }
-cluster &lt;- lapply(dataframe$genomic_id,FUN=get_cluster_membership,clusters) %&gt;% unlist %&gt;% `names&lt;-`(dataframe$genomic_id)
+  # Create list of cluster dataframe using the graph data
+  cluster &lt;- lapply(dataframe$genomic_id,FUN=get_cluster_membership,clusters) %&gt;% unlist %&gt;% `names&lt;-`(dataframe$genomic_id)
 
-data_list &lt;- list(clustering_graph=ig,cluster=cluster)
+  data_list &lt;- list(clustering_graph=ig,cluster=cluster)
 return(data_list)
 } 
 
