--- a/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>SNP Clustering Step 2: Generate pairs for SNP distance analyses</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">SNP Clustering Step 2: Generate pairs for
 SNP distance analyses</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -376,7 +376,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -456,9 +456,9 @@ species_simple &lt;- str_split(string = species,pattern = &quot; &quot;,simplify
 
 dist_matrices &lt;- readRDS(&#39;./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS&#39;)</code></pre>
 </div>
-<div id="subset-metadata-to-species-and-isolates-of-interest" class="section level1">
-<h1>Subset metadata to species and isolates of interest</h1>
-<pre class="r"><code># Subset metadata to species
+<div id="curate-metadata-to-species-and-isolates-of-interest" class="section level1">
+<h1>Curate metadata to species and isolates of interest</h1>
+<pre class="r"><code># Subset metadata and matrix to species
 clean_datasets &lt;- function(metadata,mat,species){
   # Curate datasets
   ## Species of interest
@@ -471,6 +471,7 @@ clean_datasets &lt;- function(metadata,mat,species){
   return(results)
 }
 
+# Curate metadata
 for(i in species){
   species_abrev &lt;- str_split(string = i,pattern = &quot; &quot;,simplify = T) %&gt;% apply(.,1,FUN=function(x){
   genus &lt;- x[1] %&gt;% substr(.,1,1)  %&gt;% tolower()
@@ -482,8 +483,9 @@ for(i in species){
 </div>
 <div id="get-pairwise-distances" class="section level1">
 <h1>Get pairwise distances</h1>
-<div id="get-distance-data-i.e.-info-for-each-cell" class="section level2">
-<h2>Get distance data (i.e., info for each cell)</h2>
+<div id="get-distance-data-i.e.-info-for-each-cell-this-is-much-quicker-than-other-methods-like-regentrans" class="section level2">
+<h2>Get distance data (i.e., info for each cell) [This is MUCH quicker
+than other methods like regentrans]</h2>
 <pre class="r"><code>get_cell_info &lt;- function(mat) {
   idx &lt;- which(!is.na(mat) &amp; lower.tri(mat) , arr.ind = TRUE)
   data.frame(
@@ -505,6 +507,7 @@ of the pair)</h2>
 }
 
 update_pair_types_w_info &lt;- function(pair_types_df,df,voi){ 
+  # Subset to variables of interest
   df_subset &lt;- df[, c(&quot;genomic_id&quot;, voi), drop = FALSE]
 
   # Join on isolate1
@@ -529,7 +532,7 @@ pairtype_datasets &lt;- pbmcapply::pbmclapply(species_simple,FUN=function(x){
   get_pair_types_mat(data$df,data$mat,type=&quot;type&quot;,voi=voi)   
 }, mc.cores=6) %&gt;% `names&lt;-`(species_simple)
 
-# Overall
+# Overall (Join cause why not and it helps data analysis)
 overall_pair_types &lt;- do.call(rbind, pairtype_datasets) </code></pre>
 </div>
 <div id="save-the-dataset" class="section level2">
